link RubyConf Portugal 2016 talk

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>They Hear Me Typin’, They Hatin’ | <a href='http://keyboards-eurucamp-2013.herokuapp.com'>slides</a></dt>
+        <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
+        <dd>As programmers we spend a significant amount of our time typing, and – given the abundance of laptops – we often do it on whatever keyboard was chosen by our hardware’s manufacturer. While certain laptop brands are known to have stellar keyboards (and no less famous pointing devices), some of us yearn for the good old times of <a href='http://en.wikipedia.org/wiki/Model_M_keyboard'>IBM Model M</a>; yes, you could hear them from across the building, but once you played with one for some time you grew way more tolerant of its constant – if not distant – clicking.</dd>
+        <dd>This talk covers the current state of the mechanical keyboard world, the replacable keycap craze and all the fun you can possibly squeeze out of your daily fingertip companion – including some tips on how to configure your system to easily input all the weird characters needed now and then, from ♥ and ‰ to mëtäl ümläuts and ☭.</dd>
+        <dd>Given at <a href='http://eurucamp.org'>eurucamp</a> 2013, to be given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2016.</dd>
+
         <dt>Ruby Smells | <a href='rubyconf-pt-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=ZzqOuHI5MkA'>video</a></dt>
         <dd>Writing good object-oriented code is hard: object boundaries are not always as clear-cut as we’d like, their responsibilities and reasons to change tend to grow over time, inter-object coupling makes isolated testing complicated – and emergency refactorings are tiresome, gnarly and seem to always happen too late. At the same time it’s often hard to see the exact moment when a simple refactoring would save a given class from taking the wrong turn, and real-life projects tend to have real-life <a href='https://twitter.com/lunivore/status/301007423106322434'>sadlines</a> with their tireless chants of ‘let’s refactor this in the <em>next</em> sprint’.</dd>
         <dd>Ruby’s dynamism means static code analysis is tricky (to say the least), but tools like <a href='https://github.com/bbatsov/rubocop'>RuboCop</a> and <a href='https://github.com/troessner/reek'><code>reek</code></a> bravely show it’s not impossible. This talk shows how to effectively use such tools, make informed decisions on when and how to refactor, and – most importantly – learn over time to spot potential code smells right when they’re introduced.</dd>
@@ -145,12 +151,6 @@
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012 and <a href='http://linz.kod.io'>Kod.io</a> 2014.</dd>
-
-        <dt>They Hear Me Typin’, They Hatin’ | <a href='http://keyboards-eurucamp-2013.herokuapp.com'>slides</a></dt>
-        <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
-        <dd>As programmers we spend a significant amount of our time typing, and – given the abundance of laptops – we often do it on whatever keyboard was chosen by our hardware’s manufacturer. While certain laptop brands are known to have stellar keyboards (and no less famous pointing devices), some of us yearn for the good old times of <a href='http://en.wikipedia.org/wiki/Model_M_keyboard'>IBM Model M</a>; yes, you could hear them from across the building, but once you played with one for some time you grew way more tolerant of its constant – if not distant – clicking.</dd>
-        <dd>This talk covers the current state of the mechanical keyboard world, the replacable keycap craze and all the fun you can possibly squeeze out of your daily fingertip companion – including some tips on how to configure your system to easily input all the weird characters needed now and then, from ♥ and ‰ to mëtäl ümläuts and ☭.</dd>
-        <dd>Given at <a href='http://eurucamp.org'>eurucamp</a> 2013.</dd>
 
         <dt>Bogus: A Brief Introduction | <a href='http://bogus-wrug-2013-07.herokuapp.com'>slides</a></dt>
         <dd>An introduction to <a href='https://github.com/psyho/bogus'>Bogus</a>, a test double library that tracks doubles’ sync with reality.</dd>
