--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Integration Tests are Bogus | <a href='rubyday-2016'>slides</a> (RubyDay) | <a href='wrocloverb-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=7XI3H_rKmRU'>video</a></dt> (wroc_love.rb)
+        <dd>The Ruby community embraced testing early, with many developers switching full-time to test-driven development (and, more importantly, test-driven design); discovering the domain of a given problem and the mechanics required to make objects interact painlessly by implementing a system from outside in are oftentimes eye-opening experiences.</dd>
+        <dd>Whether you like to write well-isolated (and fast!) unit tests or need to implement the outside of a system without having the inside nits-and-bolts in place beforehand there’s a plethora of stubbing and mocking libraries to choose from. Unfortunately, heavy mocking and stubbing comes with a cost: even with the most well-tested-in-isolation objects you can’t really say anything about their proper wirings without some integration and end-to-end tests – and writing the former is often not a very enjoyable experience.</dd>
+        <dd>This talk covers a new player on the Ruby testing scene: <a href='https://github.com/psyho/bogus'>Bogus</a>, a library for stubbing, mocking and spying that goes the extra mile and verifies whether your fakes have any connection with reality – whether the faked methods exist on the actual object, whether they take the right number of arguments and even whether tests for a given class verify the behaviour that the class’s fakes pretend to have.</dd>
+        <dd>With Bogus quite a few of the <a href='http://www.infoq.com/presentations/integration-tests-scam'>famously derided integration tests</a> come for free; a&nbsp;change to a method’s name or its signature will make all of the related fakes complain, and all the missing pieces of a system written from outside in will present themselves ready to be implemented.</dd>
+        <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014, to be given at <a href='http://rubyday.it'>RubyDay</a> 2016.</dd>
+
         <dt>They Hear Me Typin’, They Hatin’ | <a href='rubyconf-pt-2016'>slides</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
         <dd>As programmers we spend a significant amount of our time typing, and – given the abundance of laptops – we often do it on whatever keyboard was chosen by our hardware’s manufacturer. While certain laptop brands are known to have stellar keyboards (and no less famous pointing devices), some of us yearn for the good old times of <a href='http://en.wikipedia.org/wiki/Model_M_keyboard'>IBM Model M</a>; yes, you could hear them from across the building, but once you played with one for some time you grew way more tolerant of its constant – if not distant – clicking.</dd>
@@ -138,13 +145,6 @@
 
         <dt>From Here to <del>Eternity</del> eurucamp | <a href='wrocloverb-2014-lt'>slides</a></dt>
         <dd>A 43-slide, five minute lightining talk on the interactions between Ruby’s <code>Date</code> class and <code>Enumerable</code> module.</dd>
-        <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
-
-        <dt>Integration Tests are Bogus | <a href='wrocloverb-2014'>slides</a> | <a href='https://www.youtube.com/watch?v=7XI3H_rKmRU'>video</a></dt>
-        <dd>The Ruby community embraced testing early, with many developers switching full-time to test-driven development (and, more importantly, test-driven design); discovering the domain of a given problem and the mechanics required to make objects interact painlessly by implementing a system from outside in are oftentimes eye-opening experiences.</dd>
-        <dd>Whether you like to write well-isolated (and fast!) unit tests or need to implement the outside of a system without having the inside nits-and-bolts in place beforehand there’s a plethora of stubbing and mocking libraries to choose from. Unfortunately, heavy mocking and stubbing comes with a cost: even with the most well-tested-in-isolation objects you can’t really say anything about their proper wirings without some integration and end-to-end tests – and writing the former is often not a very enjoyable experience.</dd>
-        <dd>This talk covers a new player on the Ruby testing scene: <a href='https://github.com/psyho/bogus'>Bogus</a>, a library for stubbing, mocking and spying that goes the extra mile and verifies whether your fakes have any connection with reality – whether the faked methods exist on the actual object, whether they take the right number of arguments and even whether tests for a given class verify the behaviour that the class’s fakes pretend to have.</dd>
-        <dd>With Bogus quite a few of the <a href='http://www.infoq.com/presentations/integration-tests-scam'>famously derided integration tests</a> come for free; a&nbsp;change to a method’s name or its signature will make all of the related fakes complain, and all the missing pieces of a system written from outside in will present themselves ready to be implemented.</dd>
         <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
 
         <dt>Fly, You Tools! | <a href='kodio-2014'>slides</a> | <a href='http://confreaks.com/videos/3248-kodio_2014-fly-you-tools'>video</a></dt>
