link WRUG February 2017 talk

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a> | <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
+        <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
+        <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
+        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017 (<a href='/wrug-2017-02/'>slides</a>).</dd>
+
         <dt>They Hear Me Typin’, They Hatin’ | <a href='rubyconf-pt-2016'>slides</a> | <a href='https://www.youtube.com/watch?v=y9yQPl2WxfQ'>video</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
         <dd>As programmers we spend a significant amount of our time typing, and – given the abundance of laptops – we often do it on whatever keyboard was chosen by our hardware’s manufacturer. While certain laptop brands are known to have stellar keyboards (and no less famous pointing devices), some of us yearn for the good old times of <a href='http://en.wikipedia.org/wiki/Model_M_keyboard'>IBM Model M</a>; yes, you could hear them from across the building, but once you played with one for some time you grew way more tolerant of its constant – if not distant – clicking.</dd>
@@ -128,11 +133,6 @@
         <dt>Hacking on <code>reek</code> | <a href='rossconf-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=OuiiBhyKBKc'>video</a></dt>
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
         <dd>Given at <a href='http://rossconf.io'>ROSSConf Vienna</a> 2015.</dd>
-
-        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a> | <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
-        <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
-        <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
-        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
 
         <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a> | <a href='http://confreaks.com/videos/4795-arrrrcamp2014-weak-references-strongly-held'>video</a></dt>
         <dd>Ruby’s standard library is full of little-known… well, gems of interesting code – which might not be needed on a daily basis, but are super-useful when required. From <code>continuation</code> and <code>etc</code> to <code>tsort</code> and <code>weakref</code>, learning about them means not only they might save you one day, but also make you a better developer (even if by researching the question ‘why on Earth would anyone package such a thing…?’ Come and learn about the libraries you’re already using!
