--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a> | <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
+        <dt>Ruby’s Gems | <a href='/wrug-2017-02/'>slides</a> (WRUG) | <a href='rubyconf-pt-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
-        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017 (<a href='/wrug-2017-02/'>slides</a>).</dd>
+        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017.</dd>
 
         <dt>They Hear Me Typin’, They Hatin’ | <a href='rubyconf-pt-2016'>slides</a> | <a href='https://www.youtube.com/watch?v=y9yQPl2WxfQ'>video</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
