--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <dl>
         <dt>The Modern Prometheus | <a href="/polyconf-2017/">slides</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
-        <dd>To be given at <a href='http://polyconf.com'>PolyConf</a> 2017.</dd>
+        <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017.</dd>
 
         <dt>Ruby Smells | <a href='/rubyconf-by-lt-2016/'>slides</a> + <a href='https://www.youtube.com/watch?v=pazYe7WRWRU'>video</a> | <a href='/rubyc-2017/'>RubyC slides</a></dt>
         <dd>Writing good object-oriented code is hard: object boundaries are not always as clear-cut as we’d like, their responsibilities and reasons to change tend to grow over time, inter-object coupling makes isolated testing complicated – and emergency refactorings are tiresome, gnarly and seem to always happen too late. At the same time it’s often hard to see the exact moment when a simple refactoring would save a given class from taking the wrong turn, and real-life projects tend to have real-life <a href='https://twitter.com/lunivore/status/301007423106322434'>sadlines</a> with their tireless chants of ‘let’s refactor this in the <em>next</em> sprint’.</dd>
