Toto, I have a feeling we’re not on HTTP anymore

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset='UTF-8' />
     <style type='text/css'>
-      @import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-      @import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+      @import url(//fonts.googleapis.com/css?family=IM+Fell+English);
+      @import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
 
       * {
         font-size:   1em;
