Link PolyConf 2017 video

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt>The Modern Prometheus | <a href="/polyconf-2017/">slides</a></dt>
+        <dt>The Modern Prometheus | <a href="/polyconf-2017/">slides</a> | <a href="https://www.youtube.com/watch?v=8zQL4ICg5BY">video</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
         <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017.</dd>
 
