--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul>
           <li><a href='//chastell.net' title='root'>chastell.net</a></li>
           <li>⚛ + ⌨ = ⚙</li>
-          <li><a href='//chastell.net/1/125/' title='½ million pixels'>1 / 125</a></li>
+          <li><a href='//chastell.net/1/125/' title='½ million pixels'>¹⁄₁₂₅</a></li>
           <li><a href='//talks.chastell.net' title='look at all the talks I give'>talks</a></li>
         </ul>
       </nav>
