--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Ruby’s Gems | <a href='/ruby-on-ice-2018/'>slides</a> (Ruby on Ice) | <a href='rubyconf-pt-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
+        <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
+        <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
+        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017.</dd>
+        <dd>To be given at <a href='https://rubyonice.com'>Ruby on Ice</a> 2018.</dd>
+
         <dt>The Modern Prometheus | <a href="/polyconf-2017/">slides</a> | <a href="https://www.youtube.com/watch?v=8zQL4ICg5BY">video</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
         <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017.</dd>
@@ -107,11 +113,6 @@
         <dd>Writing good object-oriented code is hard: object boundaries are not always as clear-cut as we’d like, their responsibilities and reasons to change tend to grow over time, inter-object coupling makes isolated testing complicated – and emergency refactorings are tiresome, gnarly and seem to always happen too late. At the same time it’s often hard to see the exact moment when a simple refactoring would save a given class from taking the wrong turn, and real-life projects tend to have real-life <a href='https://twitter.com/lunivore/status/301007423106322434'>sadlines</a> with their tireless chants of ‘let’s refactor this in the <em>next</em> sprint’.</dd>
         <dd>Ruby’s dynamism means static code analysis is tricky (to say the least), but tools like <a href='https://github.com/bbatsov/rubocop'>RuboCop</a> and <a href='https://github.com/troessner/reek'><code>reek</code></a> bravely show it’s not impossible. This talk shows how to effectively use such tools, make informed decisions on when and how to refactor, and – most importantly – learn over time to spot potential code smells right when they’re introduced.</dd>
         <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2015 (<a href='rubyconf-pt-2015'>slides</a>, <a href='https://www.youtube.com/watch?v=ZzqOuHI5MkA'>video</a>), <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> December 2015, <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02/'>slides</a>, <a href='https://www.youtube.com/watch?v=UlvxK60yG4I'>video</a>), <a href='http://rubyconf.lt'>RubyConfLT</a> &amp; <a href='http://rubyconference.by'>RubyConfBY</a> 2016 and <a href='http://rubyc.eu'>RubyC</a> 2017 (<a href='/rubyc-2017/'>slides</a>).</dd>
-
-        <dt>Ruby’s Gems | <a href='/wrug-2017-02/'>slides</a> (WRUG) | <a href='rubyconf-pt-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
-        <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
-        <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
-        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017.</dd>
 
         <dt>They Hear Me Typin’, They Hatin’ | <a href='rubyconf-pt-2016'>slides</a> | <a href='https://www.youtube.com/watch?v=y9yQPl2WxfQ'>video</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
