--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         <dt>Ruby’s Gems | <a href='/ruby-on-ice-2018/'>slides</a> (Ruby on Ice) | <a href='rubyconf-pt-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
-        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017.</dd>
-        <dd>To be given at <a href='https://rubyonice.com'>Ruby on Ice</a> 2018.</dd>
+        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014, <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> February 2017 and <a href='https://rubyonice.com'>Ruby on Ice</a> 2018.</dd>
 
         <dt>The Modern Prometheus | <a href="/polyconf-2017/">slides</a> | <a href="https://www.youtube.com/watch?v=8zQL4ICg5BY">video</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
