Balkan Ruby 2018: cuts and fixes

--- a/balkan-ruby-2018/index.html
+++ b/balkan-ruby-2018/index.html
@@ -29,6 +29,7 @@
         <section data-markdown='talk/benchmarks.md' data-separator='^\n\n'></section>
         <section data-markdown='talk/popcount.md' data-separator='^\n\n'></section>
         <section data-markdown='talk/entities.md' data-separator='^\n\n'></section>
+        <section data-markdown='talk/boundary.md' data-separator='^\n\n'></section>
         <section data-markdown='talk/gems.md' data-separator='^\n\n'></section>
         <section data-markdown='talk/outro.md' data-separator='^\n\n'></section>
 			</div>
