--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <dl>
         <dt>The Modern Prometheus | <a href="/krug-2018-10/">slides</a> | <a href="https://www.youtube.com/watch?v=8zQL4ICg5BY">video</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
-        <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017 and <a href='https://balkanruby.com'>Balkan Ruby</a> 2018, to be given at <a href='https://www.meetup.com/Krakow-Ruby-Users-Group/'>KRUG</a> October 2018.</dd>
+        <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017, <a href='https://balkanruby.com'>Balkan Ruby</a> 2018 and <a href='https://www.meetup.com/Krakow-Ruby-Users-Group/'>KRUG</a> October 2018.</dd>
 
         <dt>Ruby’s Gems | <a href='/ruby-on-ice-2018/'>slides</a> (Ruby on Ice) | <a href='rubyconf-pt-2014'>slides</a> + <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
