Link EuRuKo & BRUG talks

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Boring Stacks for Interesting Times | <a href="/brug-2024-11/">slides</a></dt>
+        <dd>With the ZIRP (zero-interest rates policy) period behind us, the IT at large – and web / SaaS slice of it in particular – is facing interesting times. Smaller teams (or even single devs) will need to deliver leaner solutions, and projects like LiteStack show us an enticingly minimalist environments.</dd>
+        <dd>Given at <a href='https://www.facebook.com/BRUG.BialystokRubyUserGroup/'>BRUG</a> November 2024.</dd>
+
+        <dt>Simplify, Then Add Lightness | <a href='/euruko-2024/'>slides</a></dt>
+        <dd>With ZIRP behind us smaller teams often need to deliver leaner solutions – and projects like LiteStack are there to help. Meanwhile even the smallest dependencies keep getting new features (and Ruby keeps getting significantly more performant) – so let’s see how to keep the stack simple and cutting-edge.</dd>
+        <dd>Let’s take a look at how simple modern stacks can be – from sending HTML snippets over WebSocket to operating job queues in SQLite. Full-stack development in Ruby means quicker turn-around and simpler deploys – and paired with a well-thought-out approach to keeping all the dependencies fresh, the maintenance part of our life can be both much easier and actually enjoyable.</dd>
+        <dd>Given at <a href='https://2024.euruko.org/'>EuRuKo</a> 2024.</dd>
+
         <dt>The Modern Prometheus | <a href="/krug-2018-10/">slides</a> | <a href="https://www.youtube.com/watch?v=8zQL4ICg5BY">video</a></dt>
         <dd>Most non-scripting languages are faster than Ruby (Rust: tremendously so), but few (Crystal?) can match its optimisation for developer happiness and productivity. Let’s try to gauge Ruby’s chances when it comes to matching modern performance expectations: Are the changes in recent CRuby versions significant? Can JRuby bring enough JVM performance? And – to address the titular Frankenstein – how easily can we harness the power of Crystal, Rust, C or even assembly from within our Ruby applications?</dd>
         <dd>Given at <a href='http://polyconf.com'>PolyConf</a> 2017, <a href='https://balkanruby.com'>Balkan Ruby</a> 2018 and <a href='https://www.meetup.com/Krakow-Ruby-Users-Group/'>KRUG</a> October 2018.</dd>
